--- a/pages/login.ejs
+++ b/pages/login.ejs
@@ -1,38 +1,107 @@
 <!doctype html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>login</title>
+  <link rel="stylesheet" href="../static/styles/css/common.css">
+  <link rel="stylesheet" href="../static/styles/css/login.css">
 
-  <style>
-    .api-form-wrap {
-      width: 300px;
-      padding: 10px 20px;
-      border: 1px dashed #999;
-      border-radius: 4px;
-      margin-bottom: 20px;
-    }
-    .api-form-wrap p {
-      margin: 0 0 5px;
-      font-size: 18px;
-      font-weight: bold;
-    }
-    .api-form-wrap button {
-      width: 100%;
-      padding: 6px 20px;
-      margin-top: 20px;
-    }
-    .api-field label {
-      display: inline-block;
-      width: 100px;
-    }
-  </style>
+
 </head>
+
 <body>
 
-<div class="api-form-wrap">
+  <!-- 头部信息 -->
+  <header class="w">
+    <img src="../static/images/top-login-logo.png" alt="">
+    <img src="../static/images/login-word.png" alt="">
+    <p class="welcom-words">来天涯，与141978062位天涯人共同演绎你的网络人生</p>
+  </header>
+  <!-- 中间的登录板块 -->
+  <section class="middle">
+    <!-- 版心模块 -->
+    <section class="w">
+      <!-- 左边的图片 -->
+      <img src="../static/images/bg_earth.jpg" alt="" class="bg">
+      <!-- 右边的登录信息 -->
+      <div class="login">
+        <span class="words">二维码登录更便捷</span>
+        <span class="img"></span>
+        <!-- 登录信息上半部分-form信息 -->
+        <div class="login-info">
+          <form action="/api/login" method="post">
+            <input type="text" name="name" id="" placeholder="用户名/手机/邮箱">
+            <input type="password" name="password" id="" placeholder="密码">
+            <div class="login-info-check">
+              <label for="autologin">
+                <input type="checkbox" name="autologin" id="autologin" checked="checked">下次自动登录
+              </label>
+              <a href="javascripte:;">忘记密码？</a>
+            </div>
+            <button>登录</button>
+          </form>
+          <div class="login-info-register">
+            <a href="#">立即注册</a>
+          </div>
+        </div>
+        <!-- 登录信息中间部分-其他账号登录切换 -->
+        <div class="switch-info">
+          <div>
+            <span>其他帐号登录：</span>
+            <ul>
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+            </ul>
+          </div>
+        </div>
+        <!-- 登录信息下半部分-其他信息 -->
+        <div class="online-info">
+          <span class="online-num">当前在线人数：</span>
+          <span class="safari">浏览进入>></span>
+        </div>
+      </div>
+    </section>
+  </section>
+
+  <!-- 底部信息 -->
+  <footer>
+    <div class="w">
+      <ul class="links">
+        <li><a href="#">关于天涯</a></li>
+        <li><a href="#">广告服务</a></li>
+        <li><a href="#">天涯客服</a></li>
+        <li><a href="#">隐私和版权</a></li>
+        <li><a href="#">联系我们</a></li>
+        <li><a href="#">加入天涯</a></li>
+        <li><a href="#" class="child">儿童不良信息举报</a></li>
+        <li>© 1999 - 2020 天涯社区版权所有</li>
+      </ul>
+      <p class="copyright">
+        <a href="#">增值电信业务经营许可证（琼B2-20060032）</a>
+        <a href="#">网络文化经营许可证（琼网文【2018】9148-792号）</a>
+        <a href="#">互联网药品信息服务资格证书(琼)-经营性-2010-0003</a>
+      </p>
+      <p class="copyright">
+        <a href="#">信息网络传播视听节目许可证</a>
+        <a href="#">广播电视节目制作经营许可证（琼字第052号）</a>
+        <a href="#">琼公网安备 46010602000002号</a>
+        打击网络侵权盗版“剑网2018”专项行动举报投诉热线12318
+      </p>
+      <img src="../static/images/ft-logo.jpg" alt="">
+    </div>
+  </footer>
+</body>
+
+</html>
+
+
+
+<!-- <div class="api-form-wrap"> 
   <p>login</p>
   <form action="/api/login" method="post">
     <div class="api-field">
@@ -45,7 +114,4 @@
     </div>
     <button>login</button>
   </form>
-</div>
-
-</body>
-</html>
+</div> -->
